feat: add first-class credential providers
